--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - run: swift test
       - name: Run example
-        run: swift run
+        run: swift run chinook && swift test
         working-directory: example
 
